fix font on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
 }
 #dark, #light {
-  font-size: 16pt;
   margin: 0;
   padding: 0;
   position: absolute;
